--- a/package.json
+++ b/package.json
@@ -1,46 +1,30 @@
 {
-  "name": "todoist",
-  "version": "0.1.0",
-  "private": true,
+  "name": "cdflow",
+  "version": "0.1.1",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "test": "mocha tests/tests.js"
+  },
+  "bin": {
+    "cdflow": "./gcloud_utils.js"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "@google-cloud/compute": "^0.11.0",
+    "@google-cloud/kms": "^0.3.0",
+    "args": "^5.0.0",
+    "await-exec": "^0.1.2",
+    "chalk-animation": "^1.6.0",
+    "googleapis": "^36.0.0",
+    "path": "^0.12.7",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "babel-eslint": "^10.0.1",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chance": "^1.0.18",
     "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-vue": "^5.0.0-0",
-    "vue-template-compiler": "^2.5.17"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "mocha": "^5.2.0"
+  }
 }
