--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cdflow",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "scripts": {
     "test": "mocha tests/tests.js"
   },
@@ -15,7 +15,8 @@
     "chalk-animation": "^1.6.0",
     "googleapis": "^36.0.0",
     "path": "^0.12.7",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
